2007-06-06  Matthias Clasen  <mclasen@redhat.com>

	* glib/gutils.c (g_get_user_special_dir): Fall back to
	$HOME/Desktop for the DESKTOP directory, like 
	xdg_user_dir_lookup() does.

2007-06-05  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

	* === Released 2.13.4 ===

	* NEWS: Updates

2007-06-05  Matthias Clasen  <mclasen@redhat.com>

	* glib/gkeyfile.c (g_key_file_is_key_name):
	(g_key_file_is_group_name): Don't assume the string is
	valid UTF-8, since it may be user data.  (#444161, Ben Combee)

2007-06-05  Behdad Esfahbod  <behdad@gnome.org>

	* glib/gutf8.c: Add not to g_utf8_get_char_validated() about
	nul-terminated strings.

2007-06-05  Matthias Clasen  <mclasen@redhat.com>

	* glib/gutils.c (g_get_user_special_dir): Don't deadlock
	when running with threads.  (#444121, Christian Persch)

2007-06-05  Vincent Untz  <vuntz@gnome.org>

	* glib/goption.c: (g_option_context_get_help): don't replace the usage
	line with the description for optional parameters, but append the
	description. (#444130)

2007-06-04  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version
	
	* === Released 2.13.3 ===

	* NEWS: Updates

2007-06-04  Matthias Clasen  <mclasen@redhat.com>
	
	Add support for a number of special directories, as 
	defined by the xdg-user-dirs specification.  (#432651,
	Bastien Nocera, Emmanuele Bassi, Michael Natterer)

	* glib/glib.symbols:
	* glib/gutils.[hc]: Add the GUserDirectory enum and
	g_get_user_special_dir(), with implementations based
	on the xdg-user-dirs spec and on native interfaces
	for Win32 and Carbon.
	
	* configure.in: Add Carbon checks.

	* tests/tetsglib.c: Test g_get_user_special_dir().
	
2007-06-03  Yevgen Muntyan  <muntyan@tamu.edu>

	* glib/gregex.c: fixed g_regex_fetch_named* for cases when (?J)
	is used inside a pattern (#442265, comment #12).
	* tests/regex-test.c: Test it.

2007-06-03  Matthias Clasen <mclasen@redhat.com>

	* NEWS: Updates

2007-06-03  Yevgen Muntyan  <muntyan@tamu.edu>
